sidebar e slider mal feito

--- a/restaurantes/teste.html
+++ b/restaurantes/teste.html
@@ -134,6 +134,11 @@
             bottom: -10px;
         }
 
+        .slider-wrapper .image-list .image-item {
+        width: 250px; /* Adjust the width as needed */
+        height: 250px; /* Adjust the height as needed */
+    }
+
         /* Styles for mobile and tablets */
         @media only screen and (max-width: 1023px) {
             .slider-wrapper .slide-button {
@@ -166,16 +171,16 @@
                 chevron_left
             </button>
             <ul class="image-list">
-                <img class="image-item" src="images/img-1.jpg" alt="img-1" />
-                <img class="image-item" src="images/img-2.jpg" alt="img-2" />
-                <img class="image-item" src="images/img-3.jpg" alt="img-3" />
-                <img class="image-item" src="images/img-4.jpg" alt="img-4" />
-                <img class="image-item" src="images/img-5.jpg" alt="img-5" />
-                <img class="image-item" src="images/img-6.jpg" alt="img-6" />
-                <img class="image-item" src="images/img-7.jpg" alt="img-7" />
-                <img class="image-item" src="images/img-8.jpg" alt="img-8" />
-                <img class="image-item" src="images/img-9.jpg" alt="img-9" />
-                <img class="image-item" src="images/img-10.jpg" alt="img-10" />
+                <img class="image-item" src="imgs/bigKing_bk_burger.png" alt="img-1" />
+                <img class="image-item" src="imgs/whopper_bk_burger.png" alt="img-2" />
+                <img class="image-item" src="imgs/menu_bigKing_bk.png" alt="img-3" />
+                <img class="image-item" src="imgs/bigKing_bk_burger.png" alt="img-4" />
+                <img class="image-item" src="imgs/whopper_bk_burger.png" alt="img-5" />
+                <img class="image-item" src="imgs/menu_bigKing_bk.png" alt="img-6" />
+                <img class="image-item" src="imgs/whopper_bk_burger.png" alt="img-7" />
+                <img class="image-item" src="imgs/bigKing_bk_burger.png" alt="img-8" />
+                <img class="image-item" src="imgs/whopper_bk_burger.png" alt="img-9" />
+                <img class="image-item" src="imgs/menu_bigKing_bk.png" alt="img-10" />
             </ul>
             <button id="next-slide" class="slide-button material-symbols-rounded">
                 chevron_right
