--- a/restaurantes/menu_restaurante_page.html
+++ b/restaurantes/menu_restaurante_page.html
@@ -8,6 +8,167 @@
   <title>FoodDash</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <style>
+    .opcao {
+      position: relative;
+      text-decoration: none;
+    }
+
+    .opcao::after {
+      content: '';
+      position: absolute;
+      bottom: -2px;
+      left: 0;
+      width: 0;
+      height: 2px;
+      background-color: #000;
+      transition: width 0.5s ease;
+    }
+
+    .opcao:hover::after,
+    .opcao:focus::after,
+    .opcao:active::after {
+      width: 100%;
+    }
+
+    .container {
+      max-width: 1200px;
+      width: 75%;
+    }
+
+    .slider-wrapper {
+      position: relative;
+    }
+
+    .slider-wrapper .slide-button {
+      position: absolute;
+      top: 50%;
+      outline: none;
+      border: none;
+      height: 50px;
+      width: 50px;
+      z-index: 5;
+      color: #fff;
+      display: flex;
+      cursor: pointer;
+      font-size: 2.2rem;
+      background: #000;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+      transform: translateY(-50%);
+    }
+
+    .slider-wrapper .slide-button:hover {
+      background: #404040;
+    }
+
+    .slider-wrapper .slide-button#prev-slide {
+      left: -25px;
+      display: none;
+    }
+
+    .slider-wrapper .slide-button#next-slide {
+      right: -25px;
+    }
+
+    .slider-wrapper .image-list {
+      display: grid;
+      grid-template-columns: repeat(10, 1fr);
+      gap: 18px;
+      font-size: 0;
+      list-style: none;
+      margin-bottom: 30px;
+      overflow-x: auto;
+      scrollbar-width: none;
+    }
+
+    .slider-wrapper .image-list::-webkit-scrollbar {
+      display: none;
+    }
+
+    .slider-wrapper .image-list .image-item {
+      width: 325px;
+      height: 400px;
+      object-fit: cover;
+    }
+
+    .container .slider-scrollbar {
+      height: 24px;
+      width: 100%;
+      display: flex;
+      align-items: center;
+    }
+
+    .slider-scrollbar .scrollbar-track {
+      background: #ccc;
+      width: 100%;
+      height: 2px;
+      display: flex;
+      align-items: center;
+      border-radius: 4px;
+      position: relative;
+    }
+
+    .slider-scrollbar:hover .scrollbar-track {
+      height: 4px;
+    }
+
+    .slider-scrollbar .scrollbar-thumb {
+      position: absolute;
+      background: #000;
+      top: 0;
+      bottom: 0;
+      width: 50%;
+      height: 100%;
+      cursor: grab;
+      border-radius: inherit;
+    }
+
+    .slider-scrollbar .scrollbar-thumb:active {
+      cursor: grabbing;
+      height: 8px;
+      top: -2px;
+    }
+
+    .slider-scrollbar .scrollbar-thumb::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: -10px;
+      bottom: -10px;
+    }
+
+    .slider-wrapper .image-list .image-item {
+      width: 250px;
+      /* Adjust the width as needed */
+      height: 250px;
+      /* Adjust the height as needed */
+    }
+
+    /* Styles for mobile and tablets */
+    @media only screen and (max-width: 1023px) {
+      .slider-wrapper .slide-button {
+        display: none !important;
+      }
+
+      .slider-wrapper .image-list {
+        gap: 10px;
+        margin-bottom: 15px;
+        scroll-snap-type: x mandatory;
+      }
+
+      .slider-wrapper .image-list .image-item {
+        width: 280px;
+        height: 380px;
+      }
+
+      .slider-scrollbar .scrollbar-thumb {
+        width: 20%;
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -44,26 +205,91 @@
   </nav>
 
   <!-- IDENTIFICAÇÃO DO RESTAURANTE -->
-  <div class="p-4 p-md-5 mb-4" style="background-color: #ffffff; border-bottom: 10px ridge #febc41; border-radius: 15px;">
+  <div class="p-4 p-md-5 mb-4"
+    style="background-color: #ffffff; border-bottom: 10px ridge #febc41; border-radius: 15px;">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-4 px-0">
-                <h1 class="display-4" style="font-weight: bolder;">Burger King</h1>
-                <h5 class="mb-0">4.7★</h5>
-                <p class="mb-0">Taxa de Entrega: 2,50€</p>
-            </div>
-            <div class="col-lg-4 text-center">
-                <img src="imgs/burgerKing_marca.png" alt="Imagem do restaurante" style="max-width: 300px;">
-            </div>
-            <div class="col-lg-4 px-4">
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Procurar item" id="inputPesquisarRestaurante">
-                    <button class="btn btn-outline-primary" type="button" id="buttonPesquisarRestaurante">Procurar</button>
-                </div>
-            </div>
+      <div class="row">
+        <div class="col-lg-4 px-0">
+          <h1 class="display-4" style="font-weight: bolder;">Burger King</h1>
+          <h5 class="mb-0">4.7★</h5>
+          <p class="mb-0">Taxa de Entrega: 2,50€</p>
         </div>
+        <div class="col-lg-4 text-center">
+          <img src="imgs/burgerKing_marca.png" alt="Imagem do restaurante" style="max-width: 300px;">
+        </div>
+        <div class="col-lg-4 px-4">
+          <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Procurar item" id="inputPesquisarRestaurante">
+            <button class="btn btn-outline-primary" type="button" id="buttonPesquisarRestaurante">Procurar</button>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
+
+  <!-- SIDEBAR -->
+  <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 280px;">
+    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+      <span class="fs-4">Categorias</span>
+    </a>
+    <hr>
+    <ul class="nav nav-pills flex-column mb-auto">
+      <li class="nav-item">
+        <a href="#" class="nav-link link-body-emphasis" aria-current="page">
+          <text class="opcao">Novidades</text>
+        </a>
+      </li>
+      <li>
+        <a href="#" class="nav-link link-body-emphasis">
+          <text class="opcao">Na grelha</text>
+        </a>
+      </li>
+      <li>
+        <a href="#" class="nav-link link-body-emphasis">
+          <text class="opcao">Frango</text>
+        </a>
+      </li>
+      <li>
+        <a href="#" class="nav-link link-body-emphasis">
+          <text class="opcao">Carne</text>
+        </a>
+      </li>
+      <li>
+        <a href="#" class="nav-link link-body-emphasis">
+          <text class="opcao">Vegan</text>
+        </a>
+      </li>
+    </ul>
+  </div>
+
+
+  <div class="container">
+    <div class="slider-wrapper">
+      <button id="prev-slide" class="slide-button material-symbols-rounded">
+        chevron_left
+      </button>
+      <ul class="image-list">
+        <img class="image-item" src="imgs/bigKing_bk_burger.png" alt="img-1" />
+        <img class="image-item" src="imgs/whopper_bk_burger.png" alt="img-2" />
+        <img class="image-item" src="imgs/menu_bigKing_bk.png" alt="img-3" />
+        <img class="image-item" src="imgs/bigKing_bk_burger.png" alt="img-4" />
+        <img class="image-item" src="imgs/whopper_bk_burger.png" alt="img-5" />
+        <img class="image-item" src="imgs/menu_bigKing_bk.png" alt="img-6" />
+        <img class="image-item" src="imgs/whopper_bk_burger.png" alt="img-7" />
+        <img class="image-item" src="imgs/bigKing_bk_burger.png" alt="img-8" />
+        <img class="image-item" src="imgs/whopper_bk_burger.png" alt="img-9" />
+        <img class="image-item" src="imgs/menu_bigKing_bk.png" alt="img-10" />
+      </ul>
+      <button id="next-slide" class="slide-button material-symbols-rounded">
+        chevron_right
+      </button>
+    </div>
+    <div class="slider-scrollbar">
+      <div class="scrollbar-track">
+        <div class="scrollbar-thumb"></div>
+      </div>
+    </div>
+  </div>
 
 
 
@@ -73,23 +299,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <br><br><br><br><br>
   <!-- Footer -->
   <div style="background-color: #202020;">
     <div class="container">
@@ -135,6 +344,94 @@
       console.log(nomeRestaurante)
       document.querySelector("input#inputPesquisarRestaurante").value = "";
     }
+
+    // Função para adicionar sublinhado à opção selecionada
+    function selecionarOpcao(event) {
+      // Remove o sublinhado de todas as opções
+      const links = document.querySelectorAll('.opcao');
+      links.forEach(link => {
+        link.style.textDecoration = 'none';
+      });
+
+      // Adiciona sublinhado à opção selecionada
+      event.target.style.textDecoration = 'underline';
+    }
+
+    // Adiciona evento de clique a todas as opções do sidebar
+    const sidebarOptions = document.querySelectorAll('.opcao');
+    sidebarOptions.forEach(option => {
+      option.addEventListener('click', selecionarOpcao);
+    });
+
+
+    const initSlider = () => {
+      const imageList = document.querySelector(".slider-wrapper .image-list");
+      const slideButtons = document.querySelectorAll(".slider-wrapper .slide-button");
+      const sliderScrollbar = document.querySelector(".container .slider-scrollbar");
+      const scrollbarThumb = sliderScrollbar.querySelector(".scrollbar-thumb");
+      const maxScrollLeft = imageList.scrollWidth - imageList.clientWidth;
+
+      // Handle scrollbar thumb drag
+      scrollbarThumb.addEventListener("mousedown", (e) => {
+        const startX = e.clientX;
+        const thumbPosition = scrollbarThumb.offsetLeft;
+        const maxThumbPosition = sliderScrollbar.getBoundingClientRect().width - scrollbarThumb.offsetWidth;
+
+        // Update thumb position on mouse move
+        const handleMouseMove = (e) => {
+          const deltaX = e.clientX - startX;
+          const newThumbPosition = thumbPosition + deltaX;
+
+          // Ensure the scrollbar thumb stays within bounds
+          const boundedPosition = Math.max(0, Math.min(maxThumbPosition, newThumbPosition));
+          const scrollPosition = (boundedPosition / maxThumbPosition) * maxScrollLeft;
+
+          scrollbarThumb.style.left = `${boundedPosition}px`;
+          imageList.scrollLeft = scrollPosition;
+        }
+
+        // Remove event listeners on mouse up
+        const handleMouseUp = () => {
+          document.removeEventListener("mousemove", handleMouseMove);
+          document.removeEventListener("mouseup", handleMouseUp);
+        }
+
+        // Add event listeners for drag interaction
+        document.addEventListener("mousemove", handleMouseMove);
+        document.addEventListener("mouseup", handleMouseUp);
+      });
+
+      // Slide images according to the slide button clicks
+      slideButtons.forEach(button => {
+        button.addEventListener("click", () => {
+          const direction = button.id === "prev-slide" ? -1 : 1;
+          const scrollAmount = imageList.clientWidth * direction;
+          imageList.scrollBy({ left: scrollAmount, behavior: "smooth" });
+        });
+      });
+
+      // Show or hide slide buttons based on scroll position
+      const handleSlideButtons = () => {
+        slideButtons[0].style.display = imageList.scrollLeft <= 0 ? "none" : "flex";
+        slideButtons[1].style.display = imageList.scrollLeft >= maxScrollLeft ? "none" : "flex";
+      }
+
+      // Update scrollbar thumb position based on image scroll
+      const updateScrollThumbPosition = () => {
+        const scrollPosition = imageList.scrollLeft;
+        const thumbPosition = (scrollPosition / maxScrollLeft) * (sliderScrollbar.clientWidth - scrollbarThumb.offsetWidth);
+        scrollbarThumb.style.left = `${thumbPosition}px`;
+      }
+
+      // Call these two functions when image list scrolls
+      imageList.addEventListener("scroll", () => {
+        updateScrollThumbPosition();
+        handleSlideButtons();
+      });
+    }
+
+    window.addEventListener("resize", initSlider);
+    window.addEventListener("load", initSlider);
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
