--- a/checkout/checkout.html
+++ b/checkout/checkout.html
@@ -7,13 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <title>Checkout</title>
 </head>
 
 <body>
     <div class="container">
         <div class="row justify-content-start" id="logo-row">
-            <img src="fooddash logo image.png" id="logo" alt="fooddash">
+            <img src="imagens/fooddash logo image.png" id="logo" alt="fooddash">
         </div>
         <div class="row justify-content-center">
             <h1 class="checkout-title">Checkout</h1>
@@ -21,7 +22,7 @@
         <div class="row justify-content-start align-items-center">
             <div class="col-2">
                 <div class="d-flex flex-row align-items-center" style="margin-left: -50px;">
-                    <img src="burgerkingLogo.png" alt="Burger King" class="rounded-circle" style="width: 100px; height: 100px;">
+                    <img src="imagens/burgerkingLogo.png" alt="Burger King" class="rounded-circle" style="width: 100px; height: 100px;">
                     <h2 class="burger-king-title mb-0">Burger King</h2>
                 </div>
             </div>
@@ -31,19 +32,24 @@
                 <div class="left-div">
                     <div class="ResumoPedido">
                         <h4 class="resumo-pedido">Resumo do pedido</h4>
-                        <p style="margin-top: 20px;">0 artigos</p>
+                        <p style="margin-top: 20px; margin-bottom: 5px;">0 artigos</p>
                     </div>
-                    <div class="DetalhesEntrega" style="margin-top: 20px;">
+                    <div class="row">
+                        <div class="col">
+                            <hr class="linha">
+                        </div>
+                    </div>
+                    <div class="DetalhesEntrega" style="margin-top: 5px;">
                         <h4 class="detalhes-entrega">Detalhes da Entrega</h4>
                         <div class="row align-items-center">
                             <div class="col-auto" style="margin-top: 10px;">
-                                <img src="iconLocalizacao.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
+                                <img src="imagens/iconLocalizacao.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
                             </div>
-                            <div class="col" style="margin-top: 10px;">
-                                <p class="m-0">Sem morada</p>
+                            <div id="morada" class="col" style="margin-top: 10px;">
+                                <p id="textoMorada" class="m-0" contenteditable="false">Rua exemplo, Nº1, Aveiro</p>
                             </div>
                             <div class="col-auto" style="margin-top: 10px;">
-                                <button type="button" class="btn btn-primary" id="btnMorada">Adicionar</button>
+                                <button type="button" class="btn btn-primary" id="btnMorada" onclick="editarMorada()">Editar</button>
                             </div>
                         </div>
                     </div>
@@ -52,8 +58,95 @@
                             <hr class="linha">
                         </div>
                     </div>
+                    <div class="EstimativaEntrega" style="margin-top: 5px;">
+                        <h4 class="estimativa-entrega">Estimativa para Entrega</h4>
+                        <div class="row align-items-center opcaoEntrega" onclick="toggleSelectionEntrega(this)">
+                            <div class="col-auto">
+                                <img src="imagens/iconStandard.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
+                            </div>
+                            <div class="col">
+                                <p class="m-0">Standard</p>
+                                <p class="m-0" style="font-size: 12px;">20-30min</p>
+                            </div>
+                        </div>
+                        <div class="row align-items-center opcaoEntrega" onclick="toggleSelectionEntrega(this)">
+                            <div class="col-auto">
+                                <img src="imagens/iconAgenda.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
+                            </div>
+                            <div class="col">
+                                <p class="m-0">Agendar</p>
+                                <p class="m-0" style="font-size: 12px;">Selecionar uma hora</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="agendarHoraCampos" style="display: none;">
+                        <div class="row">
+                            <div class="col">
+                                <input type="time" class="form-control" placeholder="Selecione a hora">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <hr class="linha" style="margin-top: 30px;">
+                        </div>
+                    </div>
+                    <div class="Pagamento" style="margin-top: 5px;">
+                        <h4 class="pagamento">Pagamento</h4>
+                        <p style="margin-top: 20px;">Escolher forma de pagamento:</p>
+                        <div class="row align-items-center opcao" onclick="toggleSelection(this)" style="height: 43px;">
+                            <div class="col-auto">
+                                <img src="imagens/iconCartao.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
+                            </div>
+                            <div class="col">
+                                <p class="m-0">Cartão de Crédito ou Débito</p>
+                            </div>
+                        </div>
+                        <div class="row align-items-center opcao" onclick="toggleSelection(this)">
+                            <div class="col-auto">
+                                <img src="imagens/iconMBWAY.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
+                            </div>
+                            <div class="col">
+                                <p class="m-0">MBWAY</p>
+                            </div>
+                        </div>
+                        <div class="row align-items-center opcao" onclick="toggleSelection(this)">
+                            <div class="col-auto">
+                                <img src="imagens/iconPaypal.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
+                            </div>
+                            <div class="col">
+                                <p class="m-0">PayPal</p>
+                            </div>
+                        </div>
+                        <div id="cartaoCampos" style="display: none;">
+                            <div class="row">
+                                <div class="col">
+                                    <input type="text" class="form-control" placeholder="Nome do titular">
+                                </div>
+                                <div class="col">
+                                    <input type="number" class="form-control" placeholder="Numero do cartão">
+                                </div>
+                            </div>
+                            <div class="row" style="margin-top: 10px;">
+                                <div class="col">
+                                    <input type="date" class="form-control" placeholder="Data Validade">
+                                </div>
+                                <div class="col">
+                                    <input type="number" class="form-control" placeholder="CVC">
+                                </div>
+                            </div>
+                        </div>
+                        <div id="MBWAYCampos" style="display: none;">
+                            <div class="row">
+                                <div class="col">
+                                    <input type="tel" class="form-control" placeholder="Numero Telemovel">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+
             <div class="col-5">
                 <div class="right-div">
                     <div class="Total Pedido">
@@ -92,9 +185,51 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col">
+                            <hr class="linha">
+                        </div>
+                    </div>
+                    <div class="TotalCodigo">
+                        <div class="row align-items-center">
+                            <div class="col-auto" style="margin-top: 10px;">
+                                <h4 class="m-0">Total:</h4>
+                            </div>
+                            <div class="col" style="margin-top: 10px;">
+                                <p class="m-0"></p>
+                            </div>
+                            <div class="col-auto" style="margin-top: 10px;">
+                                <h4 class="m-0" style="font-weight: bold;">3,49€</h4>
+                            </div>
+                        </div>
+                        <div class="row align-items-center" style="margin-top: 20px;">
+                            <div class="col-auto" style="margin-top: 10px;">
+                                <img src="imagens/iconPromotion.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
+                            </div>
+                            <div class="col" style="margin-top: 10px;">
+                                <p class="m-0">Adicionar código promocional</p>
+                            </div>
+                            <div class="col-auto" style="margin-top: 10px;">
+                                <button type="button" class="btn btn-primary" id="btnCodigo" onclick="adicionarPromoCode()">Adicionar</button>
+                            </div>
+                        </div>
+                        <div id="addPromoCode" style="display: none;">
+                            <div class="row">
+                                <div class="col">
+                                    <input type="text" class="form-control" placeholder="Insira o código">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                <form>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary" id="btnConfirmPagamento">Confirmar Pagamento</button>
+                    </div>
+                </form>
             </div>
         </div>
+        <br><br><br><br><br>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
